<resources>
    <string name="app_name">NeWorkNetology</string>
    <string name="posts">posts</string>
    <string name="events">events</string>
    <string name="users">users</string>
    <string name="loading">loading</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="sign_in">sign_in</string>
    <string name="action_create_account">action_create_account</string>
    <string name="field_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="field_login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="field_username">Username</string>
    <string name="field_repeat_password">Repeat password</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="avatar">avatar</string>
    <string name="menu">menu</string>
    <string name="description_post_attachment">Description post attachment</string>
    <string name="icon_like">icon like</string>
    <string name="icon_share">icon share</string>
    <string name="icon_play">icon play</string>
    <string name="icon_subscribe">icon subscribe</string>
    <string name="play_video">play video</string>
    <string name="entry">Entry</string>
    <string name="error_empty_login_and_pass">Error empty login and pass</string>
    <string name="error_loading">Error loading</string>
    <string name="sign_up_title">Registration</string>
    <string name="error_empty_field">Error empty field</string>
    <string name="error_confirm_password">Error confirm password</string>
    <string name="add_post">add post</string>
    <string name="add_event">add event</string>
    <string name="users_fragment_title">Users</string>
    <string name="posts_fragment_title">Posts</string>
    <string name="events_fragment_title">Events</string>
    <string name="user_info">User info</string>
    <string name="create_post_fragment_title">Create post</string>
    <string name="you">You</string>
    <string name="logout">Logout</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="edit">edit</string>
    <string name="remove">remove</string>
    <string name="create_event">Create Event</string>
    <string name="write_text">write text</string>
    <string name="photo_preview_description">photo preview description</string>
    <string name="take_a_photo_description">take a photo description</string>
    <string name="pick_a_photo_from_gallery_description">pick a photo from gallery description</string>
    <string name="add_participater">add participater</string>
    <string name="add_location">add location</string>
    <string name="add_info">add info</string>
    <string name="add_event_menu">add event menu</string>
    <string name="whats_is_event">Whats is event</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="edit_event">Edit event</string>
    <string name="chooser_share_post">Share</string>
    <string name="image_view_description">Image</string>
    <string name="edit_post_fragment_title">Edit post</string>
    <string name="author_avatar_image">Avatar image</string>
    <string name="wall">wall</string>
    <string name="jobs">jobs</string>
    <string name="button_new_job">button new job</string>
    <string name="present_time">PT</string>
    <string name="button_remove_job">Button remove job</string>
    <string name="name">name</string>
    <string name="position">position</string>
    <string name="link">link</string>
    <string name="date_start">date start</string>
    <string name="dash">dash</string>
    <string name="date_finish">date finish</string>
    <string name="create">create</string>
    <string name="empty_field">empty field</string>
    <string name="invalid_date_format">invalid date format</string>
    <string name="cancel">cancel</string>
    <string name="select_date">select date</string>
    <string name="enter_dates">enter dates</string>
    <string name="icon_calendar">icon calendar</string>
    <string name="mm_dd_yyyy">mm.dd.yyyy</string>
    <string name="end_date">end date</string>
    <string name="ok">ok</string>
</resources>