<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/middle_padding">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        app:helperText="mm/dd/yyyy HH:mm"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_today_24"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/dragHandle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:inputType="datetime" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_marginTop="@dimen/middle_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateInputLayout"
        android:textSize="@dimen/create_new_text_size"
        android:textStyle="bold">
    </TextView>

    <RadioGroup
        android:id="@+id/radioButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/middle_padding"
        android:checkedButton="@id/radio_button_online"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_button_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/create_new_text_size"
            android:textStyle="bold"
            android:text="@string/online"/>
        <RadioButton android:id="@+id/radio_button_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/create_new_text_size"
            android:textStyle="bold"
            android:text="@string/offline"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>